@@ -440,6 +440,36 @@ function(find_sdl)
   endif()
 endfunction()
 
+function(find_sdl2)
+  if(${MSVC})
+    check_include_directory_msvc("SDL2-" "include")
+    check_link_directory_msvc("SDL2-" "lib/x86")
+    set(SDL_LIBRARY_DEBUG "SDL2" "SDL2main" PARENT_SCOPE)
+    set(SDL_LIBRARY "SDL2" "SDL2main" PARENT_SCOPE)
+  else()
+    include(FindPkgConfig)
+    pkg_search_module(SDL2 sdl2)
+    if(SDL2_FOUND)
+      if(SDL2_INCLUDE_DIRS)
+        include_directories(${SDL2_INCLUDE_DIRS})
+      endif()
+      if(SDL2_LIBRARY_DIRS)
+        link_directories(${SDL2_LIBRARY_DIRS})
+      endif()
+      if(SDL2_CFLAGS)
+        add_definitions(${SDL2_CFLAGS})
+      endif()
+      if(SDL2_CFLAGS_OTHER)
+        add_definitions(${SDL2_CFLAGS_OTHER})
+      endif()
+      message("-- Found SDL2: ${SDL2_VERSION}")
+    elseif(ARGV0)
+      message(SEND_ERROR "SDL2 required but not found")
+    endif()
+    set(SDL2_LIBRARY ${SDL2_LIBRARIES} PARENT_SCOPE)
+  endif()
+endfunction()
+
 function(find_vorbis)
   if(${MSVC})
     check_include_directory_msvc("libvorbis-" "include")
@@ -652,6 +682,8 @@ else()
   check_cxx_flag("-fsee" HAS_CXX_FLAG_FSEE "RELEASE")
   check_c_flag("-fsingle-precision-constant" HAS_C_FLAG_FSINGLE_PRECISION_CONSTANT "RELEASE")
   check_cxx_flag("-fsingle-precision-constant" HAS_CXX_FLAG_FSINGLE_PRECISION_CONSTANT "RELEASE")
+  check_c_flag("-funsafe-math-optimizations" HAS_C_FLAG_FUNSAFE_MATH_OPTIMIZATIONS "RELEASE")
+  check_cxx_flag("-funsafe-math-optimizations" HAS_CXX_FLAG_FUNSAFE_MATH_OPTIMIZATIONS "RELEASE")
 
   check_linker_flag("-s" "RELEASE")
 endif()
